Changed the way we dealt with dates in several places. Still a bug in displaying year in AccountActivity

--- a/Android_App/Potato/res/values/strings.xml
+++ b/Android_App/Potato/res/values/strings.xml
@@ -32,5 +32,6 @@
     <string name="title_activity_account">AccountActivity</string>
     <string name="title_activity_accounts">AccountsActivity</string>
     <string name="title_activity_transaction">TransactionActivity</string>
+    <string name="title_activity_gen_report">GenReportActivity</string>
 
 </resources>
