Mrs. Potato fixed

--- a/Potato/Mrs_Potato/res/values/strings.xml
+++ b/Potato/Mrs_Potato/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="String_Deposit">Deposit</string>
     <string name="String_Withdraw">Withdraw</string>
     <string name="title_activity_spending_report_">SpendingReport_Activity</string>
+    <string name="String_LogOut">X</string>
 
 </resources>
